--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,16 @@
     font-style: normal;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
+.raleway-font {
+    font-family: "Raleway", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+
 * {
     margin: 0px;
     padding: 0px;
@@ -15,7 +25,8 @@
 /* shared styles */
 .navbar,
 .banner,
-.card-p {
+.card-p,
+.stories-p {
     max-width: 1160px;
     margin: 0px auto;
 }
@@ -276,7 +287,162 @@
     height: 35px;
 }
 
+/* stories */
+.stories {
+    background-image: linear-gradient(0.00deg, rgba(254, 163, 1, 0.3), rgba(255, 255, 255, 0.3) 100%), url(../assets/bg.png);
 
+}
+
+.stories-title {
+    font-size: 46px;
+    font-weight: 700;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin-top: 60px;
+}
+
+.story-a {
+    border-radius: 16px;
+    background: rgb(255, 255, 255);
+    width: 540px;
+    height: 630px;
+
+}
+
+.img-a {
+    border-radius: 16px 16px 0px 0px;
+}
+
+.btn-a-container {
+    position: relative;
+}
+
+.story-btn-a {
+    position: absolute;
+    border-radius: 47.93px;
+    margin-left: 38px;
+    margin-top: -28px;
+    background: rgb(60, 216, 232);
+    border: none;
+    padding: 15px 19px;
+    color: rgb(255, 255, 255);
+    font-size: 0.93rem;
+    font-weight: 500;
+    font-family: inherit;
+
+}
+
+.story-title-a {
+    margin-top: 60px;
+    color: rgb(0, 0, 0);
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding: 0px 0px 0px 38px;
+}
+
+.story-desc-a {
+    margin-top: 50px;
+    color: rgb(102, 102, 102);
+    font-size: 0.93rem;
+    font-weight: 500;
+    padding: 0px 68px 0px 38px;
+}
+
+.stories-p {
+    display: flex;
+    gap: 20px;
+    margin-top: 80px;
+}
+
+.story-b-p {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+
+}
+
+.story-b {
+    width: 291px;
+    height: 301px;
+    background-color: #ffff;
+    border-radius: 16px;
+}
+
+.img-b {
+    width: 100%;
+    border-radius: 16px 16px 0px 0px;
+}
+
+.btn-b {
+    position: relative;
+}
+
+.btn-b1 {
+    position: absolute;
+    border-radius: 47.93px;
+    margin-left: 38px;
+    margin-top: -26px;
+    background: #95B226;
+    border: none;
+    padding: 10px 19px;
+    color: rgb(255, 255, 255);
+    font-size: 0.93rem;
+    font-weight: 500;
+    font-family: inherit;
+}
+
+.btn-b2 {
+    position: absolute;
+    border-radius: 47.93px;
+    margin-left: 38px;
+    margin-top: -26px;
+    background: #5D58F0;
+    border: none;
+    padding: 10px 19px;
+    color: rgb(255, 255, 255);
+    font-size: 0.93rem;
+    font-weight: 500;
+    font-family: inherit;
+}
+
+.btn-b3 {
+    position: absolute;
+    border-radius: 47.93px;
+    margin-left: 38px;
+    margin-top: -26px;
+    background: #64C8FF;
+    border: none;
+    padding: 10px 19px;
+    color: rgb(255, 255, 255);
+    font-size: 0.93rem;
+    font-weight: 500;
+    font-family: inherit;
+}
+
+.btn-b4 {
+    position: absolute;
+    border-radius: 47.93px;
+    margin-left: 38px;
+    margin-top: -26px;
+    background: #F0AA00;
+    border: none;
+    padding: 10px 19px;
+    color: rgb(255, 255, 255);
+    font-size: 0.93rem;
+    font-weight: 500;
+    font-family: inherit;
+}
+
+.title-b {
+    color: rgb(0, 0, 0);
+    font-size: 0.93rem;
+    font-weight: 700;
+    padding: 42px 38px 33px 38px;
+}
+
+.footer {
+    background: rgb(1, 172, 253);
+}
 
 
 
@@ -288,7 +454,8 @@
     .manu,
     .nav-title,
     .nav-btn,
-    .arrow-btn {
+    .arrow-btn,
+    .story-a {
         display: none;
     }
 
@@ -367,5 +534,53 @@
         flex-direction: column;
         align-items: center;
         margin-top: 20px;
+    }
+
+    .stories-title {
+        padding: 40px 0px -0px 0px;
+        text-align: center;
+        font: size 1.6rem;
+        font-weight: 700;
+        margin-top: 40px;
+    }
+
+    .story-b-p {
+        gap: 11px;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: 35px;
+    }
+
+    .story-b {
+        width: 100%;
+        height: 100%;
+    }
+    .btn-b1{
+        font-size: 0.6rem;
+        padding: 8px 15px;
+        margin-left: 30px;
+        margin-top: -20px;
+    }
+    .btn-b2{
+        font-size: 0.6rem;
+        padding: 8px 15px;
+        margin-left: 30px;
+        margin-top: -20px;
+    }
+    .btn-b3{
+        font-size: 0.6rem;
+        padding: 8px 15px;
+        margin-left: 30px;
+        margin-top: -20px;
+    }
+    .btn-b4{
+        font-size: 0.6rem;
+        padding: 8px 15px;
+        margin-left: 30px;
+        margin-top: -20px;
+    }
+    .title-b{
+        font-size: 0.6rem;
+        padding: 25px 42px 20px 30px ;
     }
 }
