--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,9 @@
 .navbar,
 .banner,
 .card-p,
-.stories-p {
+.stories-p,
+.all-storis,
+.footer-p {
     max-width: 1160px;
     margin: 0px auto;
 }
@@ -439,14 +441,76 @@
     font-weight: 700;
     padding: 42px 38px 33px 38px;
 }
-
+.all-storis{
+    text-align: center;
+}
+.more-btn{
+    color: rgb(255, 255, 255);
+    padding: 15px 50px;
+    background: #111111;
+    border-radius: 12px;
+    border: none;
+    cursor: pointer;
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 80px;
+    margin-bottom: 60px;
+}
+/* footer */
 .footer {
     background: rgb(1, 172, 253);
+    height:519px; 
 }
-
-
-
-
+.footer-p{
+    justify-content: space-between;
+    display: flex;
+}
+.footer-s1{
+    max-width: 400px;
+    margin-top: 123px;
+}
+.f-img{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.f-manu-title{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.f-title{
+    font-weight: 700;
+    font-size: 2.6rem;
+    color: #FFFFFF;
+}
+.footer-desc{
+    font-size: 1.25rem;
+    color: #FFFFFF;
+    margin-top: 35px;
+}
+.footer-s2,.footer-s3{
+    margin-top: 123px;
+}
+.footer-s2>ul{
+   list-style: none;
+}
+.btn-f>a{
+    color: #FFFFFF;
+    text-decoration: none;
+    font-size: 1.25rem;
+}
+.btn-f{
+    margin-top: 20px;
+}
+.social-title{
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin-bottom: 32px;
+}
+.social-img{
+   margin-right:10px;
+   cursor: pointer;
+}
 
 
 @media screen and (max-width:576px) {
@@ -558,29 +622,34 @@
     .btn-b1{
         font-size: 0.6rem;
         padding: 8px 15px;
-        margin-left: 30px;
+        margin-left: 20px;
         margin-top: -20px;
     }
     .btn-b2{
         font-size: 0.6rem;
         padding: 8px 15px;
-        margin-left: 30px;
+        margin-left: 20px;
         margin-top: -20px;
     }
     .btn-b3{
         font-size: 0.6rem;
         padding: 8px 15px;
-        margin-left: 30px;
+        margin-left: 20px;
         margin-top: -20px;
     }
     .btn-b4{
         font-size: 0.6rem;
         padding: 8px 15px;
-        margin-left: 30px;
+        margin-left: 20px;
         margin-top: -20px;
     }
     .title-b{
         font-size: 0.6rem;
         padding: 25px 42px 20px 30px ;
+    }
+    .more-btn{
+        font-size: 1rem;
+        margin-top: 20px;
+        padding: 10px 30px;
     }
 }
